--- a/0.1.0/libs.html
+++ b/0.1.0/libs.html
@@ -5,7 +5,8 @@
 	
 	<script src="polymer/webcomponents-1.0/webcomponents.js" type="text/javascript"></script>
 	<script src="jquery/jquery.core-1.11.3/jquery.js" type="text/javascript"></script>
-	<script src="ember/ember-1.12.1/ember.js" type="text/javascript"></script>
+	<!--<script src="ember/ember-1.12.1/ember.js" type="text/javascript"></script>-->
+	<script src="http://builds.emberjs.com/release/ember.min.js" type="text/javascript"></script>
 	<script src="page/page.js" type="text/javascript"></script>
 	
 	<script>
