--- a/0.1.0/libs.html
+++ b/0.1.0/libs.html
@@ -14,10 +14,44 @@
     	window.Polymer.dom = 'shadow';
   	</script>
 	
+	<link rel="import" href="top/components-1.0.1/top-absolutelayout.html">
+	<link rel="import" href="top/components-1.0.1/top-accordionlayout.html">
+	<link rel="import" href="top/components-1.0.1/top-alarmbadge.html">
 	<link rel="import" href="top/components-1.0.1/top-button.html">
+	<link rel="import" href="top/components-1.0.1/top-chart.html">
+	<link rel="import" href="top/components-1.0.1/top-checkbox.html">
+	<link rel="import" href="top/components-1.0.1/top-contextmenu.html">
+	<link rel="import" href="top/components-1.0.1/top-datepicker.html">
+	<link rel="import" href="top/components-1.0.1/top-docklayout.html">
+	<link rel="import" href="top/components-1.0.1/top-drawermenu.html">
+	<link rel="import" href="top/components-1.0.1/top-form.html">
+	<link rel="import" href="top/components-1.0.1/top-framelayout.html">
+	<link rel="import" href="top/components-1.0.1/top-gridlayout.html">
+	<link rel="import" href="top/components-1.0.1/top-imagebutton.html">
+	<link rel="import" href="top/components-1.0.1/top-imageslider.html">
+	<link rel="import" href="top/components-1.0.1/top-imageview.html">
 	<link rel="import" href="top/components-1.0.1/top-linearlayout.html">
+	<link rel="import" href="top/components-1.0.1/top-listview.html">
+	<link rel="import" href="top/components-1.0.1/top-menuitem.html">
+	<link rel="import" href="top/components-1.0.1/top-notification.html">
 	<link rel="import" href="top/components-1.0.1/top-page.html">
-	
+	<link rel="import" href="top/components-1.0.1/top-panel.html">
+	<link rel="import" href="top/components-1.0.1/top-progressbar.html">
+	<link rel="import" href="top/components-1.0.1/top-radiobutton.html">
+	<link rel="import" href="top/components-1.0.1/top-selectbox.html">
+	<link rel="import" href="top/components-1.0.1/top-slider.html">
+	<link rel="import" href="top/components-1.0.1/top-switch.html">
+	<link rel="import" href="top/components-1.0.1/top-tablayout.html">
+	<link rel="import" href="top/components-1.0.1/top-tableview.html">
+	<link rel="import" href="top/components-1.0.1/top-textarea.html">
+	<link rel="import" href="top/components-1.0.1/top-textfield.html">
+	<link rel="import" href="top/components-1.0.1/top-textview.html">
+	<link rel="import" href="top/components-1.0.1/top-toggle.html">
+	<link rel="import" href="top/components-1.0.1/top-treeview.html">
+	<link rel="import" href="top/components-1.0.1/top-videoview.html">
+	<link rel="import" href="top/components-1.0.1/top-webview.html">
+	<link rel="import" href="top/components-1.0.1/top-widgetitem.html">
+	<link rel="import" href="top/components-1.0.1/top-ajax.html">
 	
 	<script src="top/js-1.0.1/top-core.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="top/css-1.0.1/top.css">
