--- a/0.1.0/libs.html
+++ b/0.1.0/libs.html
@@ -13,7 +13,12 @@
     	window.Polymer.dom = 'shadow';
   	</script>
 	
-	<link rel="import" href="//rawgit.com/mingeon/top/master/0.1.0/top/components-1.0.1/top-absolutelayout.html">
+	<link rel="import" href="//rawgit.com/mingeon/top/master/0.1.0/top/components-1.0.1/top-button.html">
+	<link rel="import" href="//rawgit.com/mingeon/top/master/0.1.0/top/components-1.0.1/top-page.html">
+	<link rel="import" href="//rawgit.com/mingeon/top/master/0.1.0/top/components-1.0.1/top-linearlayout.html">
+	
+	
+	<!--<link rel="import" href="//rawgit.com/mingeon/top/master/0.1.0/top/components-1.0.1/top-absolutelayout.html">
 	<link rel="import" href="//rawgit.com/mingeon/top/master/0.1.0/top/components-1.0.1/top-accordionlayout.html">
 	<link rel="import" href="//rawgit.com/mingeon/top/master/0.1.0/top/components-1.0.1/top-alarmbadge.html">
 	<link rel="import" href="//rawgit.com/mingeon/top/master/0.1.0/top/components-1.0.1/top-button.html">
@@ -50,7 +55,7 @@
 	<link rel="import" href="//rawgit.com/mingeon/top/master/0.1.0/top/components-1.0.1/top-videoview.html">
 	<link rel="import" href="//rawgit.com/mingeon/top/master/0.1.0/top/components-1.0.1/top-webview.html">
 	<link rel="import" href="//rawgit.com/mingeon/top/master/0.1.0/top/components-1.0.1/top-widgetitem.html">
-	<link rel="import" href="//rawgit.com/mingeon/top/master/0.1.0/top/components-1.0.1/top-ajax.html">
+	<link rel="import" href="//rawgit.com/mingeon/top/master/0.1.0/top/components-1.0.1/top-ajax.html">-->
 	
 	<script src="//rawgit.com/mingeon/top/master/0.1.0/top/js-1.0.1/top-core.js" type="text/javascript"></script>
 	<link rel="stylesheet" href="//rawgit.com/mingeon/top/master/0.1.0/top/css-1.0.1/top.css">
